# advent-of-code

./: README.md
1/: 1a.pyth  1b.pyth  README.md
2/: .gitignore  README.md  configure.ac
2/src/: Makefile.am  intcode.c  intcode.h  main.c
2/tests/: Makefile.am  check_find_inputs.c  check_intcode.c  check_intcode.h  check_peek_poke_program.c  check_run.c  check_step.c  check_str_to_intcode_program.c
3/: README.md  wires_manhattan.r
